# GreenDome

./: .env  .eslintignore  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  bun.lockb  changelog.md  createStructure.js  dprint.json  editions.json  next.config.mjs  next.config.ts  nodemon.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quran.code-workspace  sonar-project.properties  tailwind.config.ts  tsconfig.json  tsup.config.ts  turbo.json
.cargo/: config.toml
.github/: issue-branch.yml
.github/workflows/: build-release.yml  chatgpt.yml  codesee-arch-diagram.yml  issue-branch.yml  lint_tauri.yml  linter.yml  publish-docker.yml  sonar.yml  tauri.yml
.husky/: pre-commit
apps/mushaf/: package.json
apps/next/: next.config.js  package-lock.json  package.json  tsconfig.json
apps/salah/: package.json
apps/tanzil/: package.json
apps/tarteel/: package.json
apps/vite/: package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
common/core/: .eslintrc.cjs  package.json  tailwind.config.ts  tsconfig.json
common/elements/: package.json  tsconfig.json
crates/sheikh/: Cargo.toml
crates/sheikh/src/: db.rs  main.rs
electron/: tsconfig.json
iqra/: .taurignore  Cargo.toml  tauri.conf.json
iqra/data/: quran.db  quran.sqbpro
iqra/src/: db.rs  main.rs
iqra/src/api/: mod.rs
iqra/src/commands/: get_surah_list.rs  mod.rs  surah.rs
iqra/src/queries/: iqama.rs  mod.rs  surah.rs
migrations/: 20221226131406_create-surahs.sql  20230101055406_ayah-table.sql  20230109140651_translations.sql  20230110122222_editions.sql  20230112141710_ayah-table.sql  20230405051635_reciters.sql  320230101055406_ayah-table.sql  320230109140651_translations.sql
public/: loading.html
src/: global.d.ts
tanzil/: .eslintrc-auto-import.json  .eslintrc.cjs  .eslintrc.js  .gitignore  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
tauri/: Cargo.toml  tauri.conf.json
(+474 files in other folders)
