[package]
name = 'iqra'
version = '0.1.0'
authors = ['you']
default-run = 'iqra'
edition = '2021'
license = ''
repository = ''
rust-version = '1.59'
description = 'A Tauri App'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = '1.2.1', features = [] }

[dependencies]
anyhow = '1'
dotenvy = '0.15'
islam = "1"
rspc = { version = "0.1.3", features = ["tauri"] }
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
specta = "1"
sqlx = { version = '0.6', features = ['runtime-tokio-rustls', 'sqlite', 'migrate', 'offline'] }
tauri = { version = '1', features = ["api-all"] }
time = "0.3"
tokio = { version = '1', features = ['full'] }
tracing = '0.1'
tracing-appender = '0.2'
tracing-bunyan-formatter = '0.3'
tracing-log = '0.1'
tracing-subscriber = { version = '0.3', features = ['env-filter', 'std'] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ['custom-protocol']
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ['tauri/custom-protocol']
